--- a/html-css/flexbox/style.css
+++ b/html-css/flexbox/style.css
@@ -1,6 +1,9 @@
 .flex {
     display: flex;
-    justify-content: end;
+    justify-content: start;
+    /*gap: 10px;*/
+    align-items: center;
+    flex-wrap: wrap;
     border: 3px solid black;
     background-color: #4e57ff4f;
     margin: 50px 20px;
@@ -8,6 +11,15 @@
 
 .item {
     padding: 25px;
+    background-color: #4e56ff;
+    border: 3px solid #48d359;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.item2 {
+    padding: 40px 25px;
     background-color: #4e56ff;
     border: 3px solid #48d359;
     margin: 0;
