--- a/html-css/responsividade/style.css
+++ b/html-css/responsividade/style.css
@@ -54,12 +54,19 @@ header {
 
     .nav-menu {
         flex-wrap: wrap;
+        row-gap: 8px;
     }
 }
 
 @media(max-width: 576px) {
     .container {
         padding: 0 5px;
+    }
+
+    .nav-menu {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 15px;
     }
 
 }
