--- a/html-css/responsividade/style.css
+++ b/html-css/responsividade/style.css
@@ -29,11 +29,23 @@ header {
 }
 
 
-/**/
+/*main*/
+
+
 .texts {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 40px;
+}
+
+/*grid*/
+
+.cards {
+    margin: 50px 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 40px;
 }
 
 
@@ -67,6 +79,7 @@ header {
 
     .texts {
         flex-wrap: wrap;
+        row-gap: 15px;
     }
 }
 
