--- a/html-css/responsividade/style.css
+++ b/html-css/responsividade/style.css
@@ -81,6 +81,10 @@ header {
         flex-wrap: wrap;
         row-gap: 15px;
     }
+
+    .cards {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media(max-width: 576px) {
@@ -97,6 +101,10 @@ header {
     .texts {
         flex-direction: column;
         align-items: center;
+    }
+
+    .cards {
+        grid-template-columns: 1fr;
     }
 
 }
