--- a/html-css/responsividade/style.css
+++ b/html-css/responsividade/style.css
@@ -44,7 +44,7 @@ header {
 .cards {
     margin: 50px 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     column-gap: 40px;
 }
 
@@ -60,6 +60,11 @@ header {
 @media(max-width: 992px) {
     .container {
         max-width: 700px;
+    }
+
+    .cards {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 80%));
+        justify-content: center;
     }
 }
 
@@ -82,9 +87,9 @@ header {
         row-gap: 15px;
     }
 
-    .cards {
+    /*.cards {
         grid-template-columns: 1fr 1fr;
-    }
+    }*/
 }
 
 @media(max-width: 576px) {
